@@ -140,3 +140,8 @@ BSTATE_DEVNOTCONNECTED = 0
 BSTATE_DEVNOTBOUND     = 1
 BSTATE_DEVBOUND        = 2
 
+# Networks
+NETWORK_GUID = {
+    "internet": "{436EF144-B4FB-4863-A041-8F905A62C572}",
+    "work":     "{A1182988-0D73-439e-87AD-2A5B369F808B}",
+}
