@@ -1137,3 +1137,5 @@ Tests can now be run using python-nose, with "nosetests -v tests".
 Gracefully pass over IPv6 addresses in dtptserver, looking for an IPv4 address, many
 thanks to Aurelien Bompard.
 
+Proxy configuration for using dtptserver, thanks again to Aurelien Bompard.
+
